Use Pats.get to be compatible with Java 8