@@ -2,6 +2,7 @@ package com.askimed.nf.test.util;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import groovy.lang.Closure;
 
@@ -12,7 +13,7 @@ public class FileAndPathMethods {
 	}
 
 	public static Path path(String filename) {
-		return Path.of(filename);
+		return Paths.get(filename);
 	}
 	
 	public static void with(Object context, Closure closure) {
